cogl (1.22.2-4) UNRELEASED; urgency=medium

  * Add debian/patches/fix-undef-build-failure.patch:
    - Patch from Bugzilla to fix kfreebsd build failure
  * Update Vcs fields for conversion to git
  * Add debian/gbp.conf
  * Bump debhelper compat to 10
  * Bump Standards-Version to 4.1.2

 -- Jeremy Bicha <jbicha@debian.org>  Wed, 13 Dec 2017 18:27:42 -0500

cogl (1.22.2-2) unstable; urgency=medium

  * Disable test suite as the tests need a working GL/GLES environment which
    doesn't exist on the buildds.

 -- Michael Biebl <biebl@debian.org>  Tue, 30 Aug 2016 12:40:22 +0200

cogl (1.22.2-1) unstable; urgency=medium

  [ Jeremy Bicha ]
  * Have libcogl-dev depend on libcairo2-dev

  [ Michael Biebl ]
  * New upstream release.
  * Drop 0001-kms-winsys-don-t-wait-for-a-flip-when-page-flipping-.patch,
    merged upstream.
  * Convert from cdbs to dh.
  * Drop dbg packages now that we have automatic dbgsym packages.
    Ensure proper upgrade to the new dbgsym packages by using
    dh_strip --dbgsym-migration. Bump the Build-Depends on debhelper
    accordingly.
  * Bump Standards-Version to 3.9.8.

 -- Michael Biebl <biebl@debian.org>  Tue, 30 Aug 2016 00:57:01 +0200

cogl (1.22.0-2) unstable; urgency=medium

  * Fix black screen after logout. Patch cherry-picked from upstream Git.
    (Closes: #805763)
  * Set pkg-gnome-maintainers@lists.alioth.debian.org as Maintainer and move
    Rico Tzschichholz to Uploaders.
  * Bump debhelper compatibility level to 9.
  * Install .typelib files into multiarch paths and mark the gir packages as
    Multi-Arch: same.
  * Bump Standards-Version to 3.9.6.

 -- Michael Biebl <biebl@debian.org>  Sun, 10 Jan 2016 00:20:18 +0100

cogl (1.22.0-1) unstable; urgency=medium

  * New upstream release.

 -- Andreas Henriksson <andreas@fatal.se>  Fri, 18 Sep 2015 09:34:15 +0200

cogl (1.21.2-1) experimental; urgency=medium

  * New upstream development release.
  * Update cogl symbols with one addition.
