@@ -3,6 +3,7 @@ cogl (1.22.2-4) UNRELEASED; urgency=medium
   * Add debian/patches/fix-undef-build-failure.patch:
     - Patch from Bugzilla to fix kfreebsd build failure
   * Update Vcs fields for conversion to git
+  * Add Multi-Arch metadata, thanks multiarch hinter
   * Add debian/gbp.conf
   * Bump debhelper compat to 10
   * Bump Standards-Version to 4.1.2
